--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="python.html">Python</a></li>
-                <--!<li><a href="workshops.html">Workshops</a></li>
+               <!-- <li><a href="python.html">Python</a></li>
+                <li><a href="workshops.html">Workshops</a></li>
                 <li><a href="ctf.html">Capture the Flag (CTF)</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="galary.html">Gallery</a></li>
@@ -220,7 +220,7 @@
               <p>It is fully packed with Hands-on Workshops, Lightning Talks,  Science Demos, Hacking Activities, Art and Architectural Installations,
                 Science Show, Fun Games, Stargazing, Camp Fire and many more...In short SHD India is a fusion of Science, Technology, Engineering, Maths, Arts, Architecture, Design with passion, curiosity and creative collaboration.  </p>
                 <p></p>
-                <h3><font color="#D6D0F4">There is something for everyone </font> </h3>
+                <!--<h3><font color="#D6D0F4">There is something for everyone </font> </h3>
 
                 <ul>
                   <li><font color="red">For School Kids (Age Group 5-12 years)</font></li>
@@ -264,7 +264,7 @@
                       <li>Puzzles,Art and Architectural Installations </li>
                       <lu>CTF - Capture the Flag competition</lu>
                       <li>Stargazing</li>
-                      <p>And many more...</p>
+                      <p>And many more...</p>-->
                     </ul>
                   </ul>
 
@@ -277,8 +277,8 @@
                 </div>
                 <div class="col-lg-12 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="200">
                   <h3>When?</h3>
-                  <P><font color="red"> Day-0 :</font> 18 October 2019  (Evening 6:00 pm onwards -Only for SHD Hackers and Resident Hackers)</p>
-                    <P><font color="red"> Day-1 and Day-2 :</font> 19th and 20th October 2019</p>
+                  <P><font color="red"> Day-0 :</font> 23 December 2022  (Only for SHD Hackers and Resident Hackers)</p>
+                    <P><font color="red"> Day-1 and Day-2 :</font> 24th and 25th December 2022</p>
                       <br>
                       <h3>Where?</h3>
                       <p><a href="http://sankalphospitality.in" target="_blank">Sankalp Bhoomi Farm Resort</a> , Belgaum, Karnataka State, India</p>
