--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-               <!-- <li><a href="python.html">Python</a></li>
+                <!--<li><a href="about.html">About</a></li>
+                <li><a href="python.html">Python</a></li>
                 <li><a href="workshops.html">Workshops</a></li>
                 <li><a href="ctf.html">Capture the Flag (CTF)</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -60,7 +60,7 @@
                       <li><a href="sciencehackday.in/2016/index.html" target="_blank">SHD 2016</a></li>
                     </ul>
                   </li>
-                  <li class="cta"><a href="buy-tickets.html">Buy Tickets</a></li>
+                  <!--<li class="cta"><a href="buy-tickets.html">Buy Tickets</a></li>-->
                 </ul>
               </nav>
             </div>
@@ -106,7 +106,7 @@
         <div class="col-md-10">
           <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Science Hack Day India 2022</h1>
           <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">December 23rd-25th, Belgaum, India</span>
-          <a href="https://www.instamojo.com/shdindia/" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Buy Tickets</span></a>
+          <a href="" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>MoreUpdates Coming Soon</span></a>
         </div>
       </div>
     </div>
