--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
         <div class="col-md-10">
           <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Science Hack Day India 2022</h1>
           <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">December 23rd-25th, Belgaum, India</span>
-          <a href="" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>MoreUpdates Coming Soon</span></a>
+           <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Stay tuned for the grand 5th edition of SHD India</span>
+          <a href="" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>We have some exciting updates coming soon</span></a>
         </div>
       </div>
     </div>
