--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="galary.html">Gallery</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
-                <li><a href="sponsor.html">Sponsor Us</a></li>-->
+                <li><a href="sponsor.html">Sponsor Us</a></li>
+                
+                <li><a href="news.html">Blog</a></li>-->
                 <li><a href="coc.html">COC</a></li>
-                <li><a href="news.html">Blog</a></li>
                 <li class="dropdown">
                   <a class="dropdown-toggle" data-toggle="dropdown" href="#">Archive
                     <span class="caret"></span></a>
@@ -105,7 +106,7 @@
       <div class="row align-items-center">
         <div class="col-md-10">
           <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Science Hack Day India 2022</h1>
-          <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">December 23rd-25th, Belgaum, India</span>
+          <span class="d-block mb-4 caption" data-aos="fade-up" data-aos-delay="300">December 23rd - 25th</span>
            <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Stay tuned for the grand 5th edition of SHD India</span>
           <a href="" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>We have some exciting updates coming soon</span></a>
         </div>
