--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                       <p>The airport serving the city of Belgaum is at Sambra, located 10 km from the city on the SH20. Belagavi/Belgaum Airport (IXG) has regular flights connecting <font color="red"> Bengaluru, Mumbai, Pune, Hyderabad and Ahmedabad</font>. Air tavel to Belgaum has become affordable thanks to the inclusion of IXG in UDAN-3 scheme.</p>
                       <br>
                       <h3>How to Register? </h3>
-                      <p>There are different tickets for workshops and hacker participants. We provide accomodation at the venue for outstation participants. To register please buy a suitable ticket HERE </p>
+                      <p>There are different tickets for workshops and hacker participants. We provide accomodation at the venue for outstation participants. Tickets will be released soon. </p>
 
 
 
