--- a/index.html
+++ b/index.html
@@ -411,10 +411,10 @@
                     <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
                     <ul class="list-unstyled">
                       <li><a href="http://tiny.cc/rjgxdz" target="_blank" >Event Reports</a></li>
-                      <li><a href="schedule.html">Schedule</a></li>
+                      <!--<li><a href="schedule.html">Schedule</a></li>
                       <li><a href="workshops.html">Workshops</a></li>
                       <li><a href="ctf.html">Capture the Flag (CTF)</a></li>
-                      <li><a href="http://sciencehackday.in/about.html#c1">Contact Us</a></li>
+                      <li><a href="http://sciencehackday.in/about.html#c1">Contact Us</a></li>-->
                     </ul>
                   </div>
                   <div class="col-md-4">
