--- a/coc.html
+++ b/coc.html
@@ -41,7 +41,7 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <!--<li><a href="about.html">About</a></li>
                 <li><a href="python.html">Python</a></li>
                 <li><a href="workshops.html">Workshops</a></li>
                 <li><a href="ctf.html">Capture the Flag (CTF)</a></li>
@@ -49,8 +49,8 @@
                 <li><a href="galary.html">Gallery</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="sponsor.html">Sponsor Us</a></li>
+                <li><a href="news.html">Blog</a></li>-->
                 <li><a href="coc.html">COC</a></li>
-                <li><a href="news.html">Blog</a></li>
                 <li class="dropdown">
                   <a class="dropdown-toggle" data-toggle="dropdown" href="#">Archive
                     <span class="caret"></span></a>
@@ -181,10 +181,10 @@
                                 <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
                                 <ul class="list-unstyled">
                                   <li><a href="http://tiny.cc/rjgxdz" target="_blank" >Event Reports</a></li>
-                                  <li><a href="schedule.html">Schedule</a></li>
+                                  <!--<li><a href="schedule.html">Schedule</a></li>
                                   <li><a href="workshops.html">Workshops</a></li>
                                   <li><a href="ctf.html">Capture the Flag (CTF)</a></li>
-                                  <li><a href="http://sciencehackday.in/about.html#c1">Contact Us</a></li>
+                                  <li><a href="http://sciencehackday.in/about.html#c1">Contact Us</a></li>-->
                                 </ul>
                               </div>
                               <div class="col-md-4">
