deploy: 3544a0f4e3eeae26835030a3aa8bdb67765f8504

--- a/README/index.html
+++ b/README/index.html
@@ -1,3 +1,11 @@
 <h1>Science Hack Day India</h1>
 <h3>Belgaum 2022</h3>
 <p>December 23rd - 25th, 2022, Sankalp Bhoomi Farm Resort, Belgaum</p>
+<h3>How to run the code</h3>
+<ul>
+<li>Fork and clone the repository using <code>git clone https://github.com/ScienceHackDayIndia/sciencehackday.in.git</code></li>
+<li>Run <code>npm install</code></li>
+<li>Run <code>npx @11ty/eleventy --serve</code></li>
+<li>Verify everything works as should</li>
+<li>Create a separate branch and create a PR</li>
+</ul>
