deploy: fdba64ad6d52b779702d09949f0dad19c5187a56

--- a/README/index.html
+++ b/README/index.html
@@ -1,6 +1,6 @@
 <h1>Science Hack Day India</h1>
-<h3>Belgaum 2022</h3>
-<p>December 23rd - 25th, 2022, Sankalp Bhoomi Farm Resort, Belgaum</p>
+<h3>Belgaum 2023</h3>
+<p>October 27th - 29th, 2023, Sankalp Bhoomi Farm Resort, Belgaum</p>
 <h3>How to run the code</h3>
 <ul>
 <li>Fork and clone the repository using <code>git clone https://github.com/ScienceHackDayIndia/sciencehackday.in.git</code></li>
