deploy: 7ba07b197ad72a8a910284c7d34535a61bc22a69

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     Sankalp Bhoomi Farm Resort, Belgaum
   </p>
   <div class="hero-cta">
-    <a class="primary-btn" target="_blank" rel="noopener noreferrer">
-      Registration coming soon
+    <a class="primary-btn" target="_blank" href="https://konfhub.com/shdindia" rel="noopener noreferrer">
+      Buy Tickets
     </a>
   </div>
 </div>
@@ -254,6 +254,7 @@
     
   </ul>
 </section> -->
+
   </main>
 
   <footer class="site-footer">
