deploy: 9686f0293d9808aff7d264273c39e049ef5cd515

--- a/coc/index.html
+++ b/coc/index.html
@@ -21,12 +21,12 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Montserrat+Alternates:wght@400;500;700;900&family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700;900&family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="/assets/styles.css" />
   <link rel="icon" href="/assets/images/favicon.ico">
 </head>
-<body>
+<body class=star-bg>
   <header class="site-header">
   <a href="#content" class="skip-link">Skip to content</a>
   <nav class="nav mainnav" aria-label="Main">
