--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Montserrat+Alternates:wght@400;500;700;900&family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700;900&family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="/assets/styles.css" />
   <link rel="icon" href="/assets/images/favicon.ico">
 </head>
-<body>
+<body class=star-bg>
   <header class="site-header">
   <a href="#content" class="skip-link">Skip to content</a>
   <nav class="nav mainnav" aria-label="Main">
@@ -51,14 +51,13 @@
   <main class="site-content" id="content">
     
 <div class="hero-section">
-  <div class="illustration">
-    <img class="illustration-geometry" alt="" src="/assets/images/bg_geometry.png">
-    <img class="illustration-head" alt="" src="/assets/images/bg_head.png">
-  </div>
-  <h1 class="hero-title">Science Hack Day, India</h1>
+  <!-- <div class="illustration">
+    <img class="illustration-moon" alt="" src="/assets/images/moon.jpg">
+  </div> -->
+  <h1 class="hero-title">Science Hack Day India</h1>
   <p class="hero-info">
-    October 27th - 29th, 2023<br/>
-    Sankalp Bhoomi Farm Resort, Belgaum
+    October 27 - 29, 2023<br/>
+    Belgaum, India
   </p>
   <div class="hero-cta">
     <a class="primary-btn" target="_blank" href="https://konfhub.com/shdindia" rel="noopener noreferrer">
@@ -66,7 +65,7 @@
     </a>
   </div>
 </div>
-<section class="about-section section-dark">
+<section class="about-section">
   <h2 class="section-title">What is Science Hack Day?</h2>
   <div class="flex-container">
     <div class="text-container">
