--- a/coc/index.html
+++ b/coc/index.html
@@ -37,6 +37,15 @@
       
       <li class="nav__item">
         <a
+          href="/about/"
+          class="nav__link "
+          >
+          About
+        </a>
+      </li>
+      
+      <li class="nav__item">
+        <a
           href="/coc/"
           class="nav__link "
           aria-current="page">
@@ -53,7 +62,7 @@
   <h1 id="title" class="page-title">Code of Conduct</h1>
 </div>
 <div class="container section-dark">
-  <h2>The Short Version</h2>
+  <h2 class="section-title">The Short Version</h2>
 <p>
   Science Hack Day India is an inclusive event based on treating all individuals respectfully, regardless of gender,
   sexual orientation, age, disability, ethnicity and religion (or lack thereof). We feel it is important to make clear
@@ -65,7 +74,7 @@
   don't come. If you come and act nasty or mean, we will ask you to leave. Be nice. Be considerate. Be civil. It's easy.
 </p>
 
-<h2>The Long Version</h2>
+<h2 class="section-title">The Long Version</h2>
 <p>
   Science Hack Day India is dedicated to providing a harassment-free experience for everyone, regardless of gender, gender
   identity and expression, sexual orientation, disability, physical appearance, body size, race, age or religion. We do
