--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
       
       <li class="nav__item">
         <a
+          href="/about/"
+          class="nav__link "
+          >
+          About
+        </a>
+      </li>
+      
+      <li class="nav__item">
+        <a
           href="/coc/"
           class="nav__link "
           >
