deploy: 45c420cbb323b36cde99d2fe96cdcf8906ab8233

--- a/coc/index.html
+++ b/coc/index.html
@@ -46,6 +46,15 @@
       
       <li class="nav__item">
         <a
+          href="/schedule"
+          class="nav__link "
+          >
+          Schedule
+        </a>
+      </li>
+      
+      <li class="nav__item">
+        <a
           href="/coc/"
           class="nav__link "
           aria-current="page">
