deploy: f56c3db670e636c4139a8b625d33cb0b538b4dfd

--- a/about/index.html
+++ b/about/index.html
@@ -55,6 +55,15 @@
       
       <li class="nav__item">
         <a
+          href="/partners/"
+          class="nav__link "
+          >
+          Partners
+        </a>
+      </li>
+      
+      <li class="nav__item">
+        <a
           href="/coc/"
           class="nav__link "
           >
