--- a/schedule/index.html
+++ b/schedule/index.html
@@ -55,6 +55,15 @@
       
       <li class="nav__item">
         <a
+          href="/partners/"
+          class="nav__link "
+          >
+          Partners
+        </a>
+      </li>
+      
+      <li class="nav__item">
+        <a
           href="/coc/"
           class="nav__link "
           >
