--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="/assets/styles.css" />
   <link rel="icon" href="/assets/images/favicon.ico">
 </head>
-<body class=star-bg>
+<body class=>
   <header class="site-header">
   <a href="#content" class="skip-link">Skip to content</a>
   <nav class="nav mainnav" aria-label="Main">
