deploy: 6e2ec957ef6e33f78988819024def8d08b4953f0

--- a/projects/index.html
+++ b/projects/index.html
@@ -205,6 +205,22 @@
     <p>Team: <a href=""></a></p>
   </div>
   
+  <div class="project-item">
+    <h2 class="section-title">Tensigrity Structure</h2>
+    <p>
+      Tension based structure
+    </p>
+    <p>Team: <a href="">Shiv &amp; Team</a></p>
+  </div>
+  
+  <div class="project-item">
+    <h2 class="section-title">Fractal Chair</h2>
+    <p>
+      Fractal based cushioning of chair based on body shape
+    </p>
+    <p>Team: <a href="">Ishaan and Goutam</a></p>
+  </div>
+  
 </div>
 
 </div>
