deploy: 31c08c32384e8e68d15ffd9a71d97dd657a34ea9

--- a/README/index.html
+++ b/README/index.html
@@ -9,3 +9,5 @@
 <li>Verify everything works as should</li>
 <li>Create a separate branch and create a PR</li>
 </ul>
+<h3>Trouble with Node.Js on Ubuntu?</h3>
+<p>Follow installation instructions for nodejs, npm at <a href="https://github.com/nodesource/distributions">https://github.com/nodesource/distributions</a></p>
