--- a/writeups/soldering/index.html
+++ b/writeups/soldering/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Workshop - Science Hack Day India 2023</title>
+  <title>Science Hack Day India 2023</title>
   <meta name="theme-color" content="#3c396d">
 
   <!-- Search Engine -->
   <meta name="description" content="Science Hack Day is a two-day event where anyone excited about making weird, silly or serious things with science comes together in the same physical space to see what they can prototype within 30 consecutive hours.">
-  <meta property="og:title" content="Workshop - Science Hack Day India 2023">
+  <meta property="og:title" content="Science Hack Day India 2023">
   <meta property="og:description" content="Science Hack Day is a two-day event where anyone excited about making weird, silly or serious things with science comes together in the same physical space to see what they can prototype within 30 consecutive hours.">
   <meta property="og:image" content="https://sciencehackday.in/assets/images/shdbelgaumwhite.png">
   <meta property="og:image:alt" content="Science Hack Day India logo">
@@ -66,7 +66,7 @@
         <a
           href="/workshop/"
           class="nav__link "
-          aria-current="page">
+          >
           Workshop
         </a>
       </li>
@@ -103,38 +103,22 @@
 </header>
 
   <main class="site-content" id="content">
-    <div class="page-title-section">
-  <h1 id="title" class="page-title">Workshop</h1>
-</div>
-<div class="container section-dark">
-  <div class="workshop">
-  <div class="workshop-subgroup">
-    <h2 class="section-title">Science Toys & Demos</h2>
-    <p>
-      Kids built different science toys and demos.
-    </p>
-  </div>
-  <div class="workshop-subgroup">
-    <h2 class="section-title">Soldering & Electronics</h2>
-    <p>
-      People built an <a href="/writeups/soldering">intruder alert system</a> using soldering and electronics.
-    </p>
-  </div>
-  <div class="workshop-subgroup">
-    <h2 class="section-title"> Arduino & Kuttypy</h2>
-    <p>
-      Kids were taught basics of programming using LEDs, breadboards, <a href="https://kuttypy.readthedocs.io/en/latest/workshopnano/" target="_blank">Arduino Nano and KuttyPy.</a>
-    </p>
-  </div>
-  <div class="workshop-subgroup">
-    <h2 class="section-title">World of Microbes</h2>
-    <p>
-      The world of microbes was demonstrated using microscopes.
-    </p>
-  </div>
-</div>
+    
+  <h1 class="hero-title">Soldering Workshop</h1>
+  <p class="hero-info">
+    Intruder Detection with : Sound Module, Speaker, Battery, Radar.
+  </p>
 
-</div>
+<section class="about-section">
+  <h2 class="section-title">What is this?</h2>
+
+    <img class="ui image fluid" alt="" src="/assets/images/schematic.png">
+    
+
+
+</section>
+    make responsive.
+
 
   </main>
 
