--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   </p>
   <div class="hero-cta">
     <a class="primary-btn" target="_blank" href="https://konfhub.com/shdindia" rel="noopener noreferrer">
-      Buy Tickets
+      Buy Tickets [N/A]
     </a>
   </div>
 </div>
